...

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get settingsTitle => 'Settings';

  @override
  String get settingsSectionAccount => 'Account';

  @override
  String get settingsSectionSystem => 'System';
...
  String get settingsSectionDangerZone => 'Danger zone';

  @override
  String get settingsSecretPassphrase => 'Secret passphrase';

  @override
  String get settingsPassword => 'Password';

  @override
  String get settingsProfilePicture => 'Profile picture';

  @override
  String get settingsProfilePictureCustom => 'Custom';
...
  String get settingsUpdateStatusCheckFailed => 'Couldn\'t check for updates.';

  @override
  String get settingsUpdateStatusIdle => 'Ready to check for updates.';

  @override
  String get commonBack => 'Back';

  @override
  String get commonClose => 'Close';

  @override
  String get commonOk => 'OK';
...
      'This happens once, then it\'s done.\nNetwork data charges may apply.';

  @override
  String get saplingDownload => 'Download';

  @override
  String get accountsAddAccount => 'Add account';

  @override
  String get accountsCurrent => 'Current';

  @override
  String get accountsOther => 'Other';
...
  String get accountsUpdatePicture => 'Update picture';

  @override
  String get accountsOtherAccounts => 'Other accounts';

  @override
  String get accountsManageAccounts => 'Manage accounts';

  @override
  String get accountsNameHint => '1-20 characters';

  @override
  String get accountsNameLengthMessage => 'Use up to 20 characters.';
...

  @override
  String get onbNotNow => 'Not now';

  @override
  String passcodeDigitLabel(int digit) {
    return 'Digit $digit';
  }

  @override
  String get passcodeHelpLabel => 'Passcode help';

  @override
...
  String get onbReenterPasscode => 'Re-enter your passcode.';

  @override
  String get onbSixDigitsLength => '6 digits length';

  @override
  String get onbConfirmPasscode => 'Confirm Passcode';

  @override
  String get onbCreatePasscode => 'Create Passcode';

  @override
  String get onbAdditionalAccountsFound => 'Additional accounts found';
...
      'Confirm access to your secret passphrase';

  @override
  String get settingsIncorrectPasscode => 'Incorrect passcode';

  @override
  String get settingsEnterPasscode => 'Enter Passcode';

  @override
  String get settingsConfirmYourAccess => 'Confirm your access';

  @override
  String get settingsSeedCopiedToast => 'Secret passphrase copied';
...
  String get settingsOn => 'On';

  @override
  String get settingsOff => 'Off';

  @override
  String get settingsPasscodeUpdated => 'Passcode updated';

  @override
  String get settingsTurnOff => 'Turn off';

  @override
  String settingsUninstallBody(String device) {
...
